Fixed select2 z-index issue

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -583,7 +583,7 @@ td.attendance-radio {
 }
 
 span.select2-container {
-  z-index:10050;
+  z-index:1050;
 }
 
 .no-scroll {
